# rust-for-r-devs

./: .gitignore  README.md  _quarto.yml  justfile
archive/: decode.qmd  encode.qmd  enums.qmd  error-handling.qmd  first-fn.qmd  geohash-nb.qmd  hello-world.qmd  index.qmd  na-handling.qmd  objective.qmd  p2.qmd  r-type-system.qmd  throwing-errors.qmd  using-extendr-types.qmd  vectorize-decode.qmd  vectorize-neighbor.qmd  vectorize.qmd  vibe-check.qmd
building-rust-based-r-pkgs/: 01-ffi.qmd  02-what-is-extendr.qmd  03-objective.qmd  04-hello-world.qmd  05-package-structure.qmd  06-extendr-dx.qmd  07-use-crate-url.qmd  08-new-type-struct.qmd  08-r-type-system.qmd  09-external-pointers.qmd  09-new-type-struct.qmd  10-external-pointers.qmd  10-vectorization.qmd  11-vectorization.qmd  12-lists-of-pointers.qmd  12-na-handling.qmd  13-print-helper.qmd  14-s3.qmd  15-url-getters.qmd  16-mapping-into-option.qmd  17-setters-cow.qmd  18-combining-iterators.qmd  18-recycling-and-errors.qmd  19-recycling-and-errors.qmd  20-query-pairs.qmd  21-roxygen-docs.qmd  22-cran.qmd  99-na-handling.qmd  99-path-segments.qmd  index.qmd  rust-deps.qmd
docs/: index.html  robots.txt  search.json  sitemap.xml
intro-to-rust-for-r-devs/: 01-why-rust.qmd  02-hello-world.qmd  03-types.qmd  04-fizz-buzz.qmd  05-collections.qmd  06-for-loops.qmd  07-mutability.qmd  08-mutable-vectors.qmd  09-is-odd.qmd  10-references-slices.qmd  index.qmd  (+10 more)
rurls/src/rust/: Cargo.toml  document.rs
rurls/src/rust/src/: lib.rs  shape.rs
shortuuid/src/rust/: Cargo.toml  document.rs
shortuuid/src/rust/src/: lib.rs
(+108 files in other folders)
