[package]
name = 'shortuuid'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.65'

[lib]
crate-type = [ 'rlib', 'staticlib' ]
name = 'shortuuid'

[[bin]]
name = 'document'
path = 'document.rs'

[dependencies]
extendr-api = '*'
short-uuid = "0.2.1"

[profile.release]
lto = true
codegen-units = 1
